# iroh-vpn-proxy

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: client.yml  container-build.yml  server.yml
kube/manifests/: README.md  deployment.yaml  service.yaml
src/: client.rs  hello.rs  server.rs
src/stun/: mod.rs
src/support/: connection_pool.rs  io_adaptor.rs  iroh.rs  mod.rs  static_cert_verifier.rs
src/tunnel/: io_adaptor.rs  mod.rs
src/web/: mod.rs
