[package]
name = "stun-quic-proxy"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["client", "http1", "server"] }
pin-project-lite = "0.2.17"
rustls = { version = "0.23.40", default-features = false, features = ["ring"] }
tokio = { version = "1.52.3", features = ["io-util", "macros", "rt", "signal"] }
axum = { version = "0.8.9", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.13.3" }
iroh = "0.98.2"
iroh-metrics = "0.38.3"
iroh-tickets = "0.5.0"
iroh-services = "0.14.0"
pin-project = "1.1.13"

